# rabbitmq-management-client

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/: dependabot.yaml
.github/workflows/: ci.yaml
src/: config.rs  errors.rs  lib.rs
src/api/: _generic.rs  binding.rs  cluster_name.rs  connection.rs  exchange.rs  message.rs  mod.rs  node.rs  overview.rs  pagination.rs  permission.rs  policy.rs  queue.rs  user.rs  vhost.rs
src/api/options/: mod.rs  sorting.rs
src/middlewares/: authentication.rs
tests/: basic.rs  context.rs  docker-compose.yaml  main.rs  vhosts.rs
tests/all/: basic.rs  bindings.rs  context.rs  exchanges.rs  main.rs  messages.rs  nodes.rs  queues.rs  users.rs  vhosts.rs
