[package]
name = "rabbitmq-management-client"
version = "0.0.1-alpha.9"
edition = "2021"
license = "MIT"
repository = "https://github.com/stefandanaita/rabbitmq-management-client"
description = "A Rust client for the RabbitMQ Management API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = { version = "0.3.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
base64 = "0.22"
tokio = { version = "1.37", features = ["macros"]}

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
