[package]
name = "rabbitmq-management-client"
version = "0.3.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/stefandanaita/rabbitmq-management-client"
description = "A Rust client for the RabbitMQ Management API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = { version = "0.3", features = ["json"] }
rust_decimal = { version = "1.36", features = ["serde-float"] }
serde = { version = "1", features = ["derive"] }
serde_json = { package = "serde_json_path_to_error", version = "0.1" }
serde_repr = "0.1"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1.37", features = ["macros"]}

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
